Branch responsive-design
Creación de branch responsive-design

--- a/src/main/resources/static/indexOK.html
+++ b/src/main/resources/static/indexOK.html
@@ -19,8 +19,11 @@
 <body onkeydown="return (event.keyCode != 116)">
 	
 	<div class='container'></div>
+	
+	<div class='footer'></div>
+	
 	<div id='root'></div>
-        
+
 	<script src="app/bundle.js"></script>
 	
 	
