--- a/src/main/resources/static/indexOK.html
+++ b/src/main/resources/static/indexOK.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	
+	<!-- Prueba refresh
+	<meta http-equiv="refresh" content="5" />
+	 -->
 	<link rel="icon" href="favicon.ico">
 	
 	<title>Sistema de Control Horas</title>
@@ -18,17 +21,20 @@
 </head>
 <body onkeydown="return (event.keyCode != 116)">
 	
-	<div class='container'></div>
+	<div id='home-container'></div>
 	
-	<div class='footer'></div>
+	<div id='footer'></div>
 	
 	<div id='root'></div>
 
-	<script src="app/bundle.js"></script>
 	
+	<script src="http://localhost:8080/ControlHoras/bundle.js"></script>
 	
+	<!--script src="app/bundle.js"></script-->
+	<!-- 
 	<script src="app/js/sockjs.min.js"></script>
     <script src="app/js/stomp.min.js"></script>
+     -->
     <!-- <script src="app/js/main.js"></script> -->
     
 </body>
