--- a/src/main/resources/static/indexOK.html
+++ b/src/main/resources/static/indexOK.html
@@ -26,8 +26,8 @@
 	
 	<div id='root'></div>
 
-	
-	<script src="http://localhost:8080/ControlHoras/home.js"></script>
+	 
+	<script src="home.js"></script>
 	
 	<!--script src="app/bundle.js"></script-->
 	<!-- 
